--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "erasableSyntaxOnly": true,
     "verbatimModuleSyntax": true
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "./src/**/*.mts"],
   "exclude": ["node_modules"]
 }
